--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
   <app-root></app-root>
+  
+  <!-- Static form for Netlify Forms detection - DO NOT DELETE -->
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <input type="text" name="company" />
+    <input type="text" name="subject" />
+    <textarea name="message"></textarea>
+  </form>
 </body>
 </html>
